# experiment-spec-kit

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  ruff.toml
.devcontainer/: devcontainer.json  post-create.sh
.github/: copilot-instructions.md
.github/prompts/git/: git.commit.prompt.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
specs/001-git-config-cli/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-git-config-cli/checklists/: requirements.md
specs/001-git-config-cli/contracts/: cli-interface.md
src/gitcfg/: __init__.py  __main__.py
src/gitcfg/cli/: __init__.py  app.py
src/gitcfg/cli/commands/: __init__.py  view.py
src/gitcfg/core/: __init__.py  categories.py  exceptions.py  git_config.py  models.py  parser.py
src/gitcfg/ui/: __init__.py  formatters.py  tables.py  themes.py
src/gitcfg/utils/: __init__.py  subprocess_helper.py  validators.py
tests/integration/: test_cli_view.py
tests/unit/: test_parser.py  test_tables.py
